[gd_scene load_steps=7 format=3 uid="uid://chhq0on3jdca6"]

[ext_resource type="Script" path="res://rigid_player.gd" id="1_32gyt"]
[ext_resource type="SpriteFrames" uid="uid://rv5w878xcbdx" path="res://boba_happy.tres" id="2_gkxlx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5uiem"]
radius = 58.4209

[sub_resource type="Animation" id="Animation_w6q8b"]
resource_name = "Kenyal"
length = 1.00001
loop_mode = 2
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.85, 1), Vector2(1, 0.85)]
}

[sub_resource type="Animation" id="Animation_pvyks"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3d8kr"]
_data = {
"Kenyal": SubResource("Animation_w6q8b"),
"RESET": SubResource("Animation_pvyks")
}

[node name="Boba" type="RigidBody2D"]
collision_mask = 7
gravity_scale = -1.0
contact_monitor = true
max_contacts_reported = 2
linear_damp = 8.0
angular_damp = 1.0
script = ExtResource("1_32gyt")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_gkxlx")
animation = &"happy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5uiem")

[node name="Emote_Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_3d8kr")
}
autoplay = "Kenyal"

[node name="InputTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="VoiceTimer" type="Timer" parent="."]

[node name="VoiceAudio" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Emote_Timer" to="." method="_on_emote_timer_timeout"]
[connection signal="timeout" from="InputTimer" to="." method="_on_input_timer_timeout"]
[connection signal="timeout" from="VoiceTimer" to="." method="_on_voice_timer_timeout"]
